# behavior-uncloning

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: pages.yml
docs/: index.html
docs/assets/data/: quadruped_rollouts.json  sim_task_replays.json
examples/: minimal_more_edit.py
more/: __init__.py  classifiers.py  diffusion_policy.py  losses.py  train_classifier.py  trainer.py
tests/: test_more_core.py
