[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavior-uncloning"
version = "0.1.0"
description = "Minimal MoRE utilities for behavior uncloning."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Behavior Uncloning Authors" }
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/haohww/behavior-uncloning"

[tool.setuptools.packages.find]
include = ["more*"]
